--- a/build.gradle
+++ b/build.gradle
@@ -52,8 +52,8 @@ jacocoTestCoverageVerification {
 
 sonar {
   properties {
-    property('sonar.projectName', 'vncsmyrnk_work-time-calculator')
-    property('sonar.organization', 'vncsmyrnk')
+    property('sonar.projectName', 'calculations-api')
+    property('sonar.organization', 'clocked-api')
     property('sonar.host.url', 'https://sonarcloud.io')
     property('sonar.gradle.skipCompile', 'true')
   }
