--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,15 +15,17 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Scan Tests
-        run: ./gradlew test --scan
+        run: ./gradlew test --scan | tee scan.log
 
       - name: Build
         run: ./gradlew bootJar | tee build.log
 
       - name: Collect output artifacts
         run: |
-          echo "### Build output" >> $GITHUB_STEP_SUMMARY
+          echo "# Build output" >> $GITHUB_STEP_SUMMARY
           echo "$(cat build.log | tail -n 2)" >> $GITHUB_STEP_SUMMARY
+          echo "# Test results" >> $GITHUB_STEP_SUMMARY
+          echo "$(cat scan.log | tail -n 2)" >> $GITHUB_STEP_SUMMARY
 
   sonar-static-analysis:
     runs-on: ubuntu-latest
