--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ jacocoTestCoverageVerification {
 sonar {
   properties {
     property('sonar.projectName', 'calculations-api')
-    property('sonar.organization', 'clocked-api')
+    property('sonar.organization', 'clocked-app')
     property('sonar.host.url', 'https://sonarcloud.io')
     property('sonar.gradle.skipCompile', 'true')
   }
