--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,6 @@ jobs:
           echo "$(cat build.log | tail -n 2)" >> $GITHUB_STEP_SUMMARY
           echo "# Test results" >> $GITHUB_STEP_SUMMARY
           echo "$(cat scan.log | tail -n 2)" >> $GITHUB_STEP_SUMMARY
-          echo "# Sonar scan" >> $GITHUB_STEP_SUMMARY
-          echo "https://sonarcloud.io/project/information?id=clocked-app_calculations-api" >> $GITHUB_STEP_SUMMARY
 
   upload-coverage-to-sonar-cloud:
     runs-on: ubuntu-latest
@@ -41,3 +39,8 @@ jobs:
 
       - name: Upload coverage to SonarCloud
         run: ./gradlew sonar -Dsonar.gradle.skipCompile=true
+
+      - name: Collect output artifacts
+        run: |
+          echo "# Sonar scan" >> $GITHUB_STEP_SUMMARY
+          echo "https://sonarcloud.io/project/information?id=clocked-app_calculations-api" >> $GITHUB_STEP_SUMMARY
