--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ jacocoTestCoverageVerification {
 
 sonar {
   properties {
+    property('sonar.projectName', 'Calculations-api')
     property('sonar.projectKey', 'clocked-app_calculations-api')
     property('sonar.organization', 'clocked-app')
     property('sonar.host.url', 'https://sonarcloud.io')
